--- a/hello_deepak/pom.xml
+++ b/hello_deepak/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>hello_deepak</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hello_deepak</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for gitSpring Boot!</description>
 	<url/>
 	<licenses>
 		<license/>
